# SimpleLogisticRegression

./: README.md  SimpleLogisticRegression.sln
SimpleLogisticRegression/: CMakeLists.txt  SimpleLogisticRegression.cpp  SimpleLogisticRegression.vcxproj  SimpleLogisticRegression.vcxproj.filters
